Revision history for Perl extension MooseX-Singleton

{{$NEXT}}
    - move repository to github Moose organization

0.29 2011-12-08
    - Fix warnings_once.t to not die if Test::NoWarnings isn't installed (Kaare)

0.28 2011-12-05
    - Fix RT Bug #46086, "name used only once" (Thanks chisel for the patch and
      the test)

0.27 2011-05-19
    - Fix 006-cooperative.t - this test requires MooseX::StrictConstructor
      0.16+ to pass with Moose 2.00+. Reported by Alexandr Ciornii. RT
      #67965. (Dave Rolsky)

0.26 2011-02-26
    - This module will now work with Moose 1.9900+, but it still works with
      older Moose as well. (Dave Rolsky)

    - The test suite now uses Test::Fatal instead of Test::Exception. (Karen
      Etheridge)

0.25 2010-08-22
    - Fixes for latest Moose. (Dave Rolsky)

0.24 2010-07-15
    - Require Moose 0.94+. (Dave Rolsky)

0.23 2010-07-15
    - Use modern Moose APIs to avoid warnings from the next Moose. (Dave
      Rolsky)

0.22 2009-12-25
    - The ->initialize method was both broken and undocumented. RT
      #51260. (Dave Rolsky)
    - Updated docs to encourage use of ->instance and ->initialize, and
      discourage calling ->new directly. Doing so may be deprecated in a
      future release. (Dave Rolsky)

0.21 2009-09-12
    - Various modules in this class were trying to load the old pre-0.20
      classes, which have all been renamed. Tests passed if you had 0.19 or
      earlier installed, but failed for fresh installations. (Dave Rolsky)

0.20 2009-09-11
    - Converted this extension to use roles rather than metaclass
      subclasses. This means it will cooperate with other extensions on CPAN,
      like MooseX::StrictConstructor, etc. (Dave Rolsky)

0.19 2009-07-09
    - Remove ambiguity about copyright holder (Sartak)

0.18 2009-06-21
    - Changes to work Moose 0.82 (Dave Rolsky)

0.17 2009-04-24
    - Add ClassName->_clear_instance. (hdp)

0.16 2009-04-24