@@ -1,43 +1,0 @@
-# Avoid version control files.
-^RCS
-^CVS
-,v$
-\.svn.*
-^\.hg
-^\.git
-
-# Avoid Makemaker generated and utility files.
-^Makefile$
-^blib
-^MakeMaker-\d
-^pm_to_blib$
-^blibdirs$
-^MANIFEST\.SKIP$
-
-# Avoid Module::Build generated and utility files.
-^Build$
-^_build
-^Build.bat$
-
-# Avoid temp and backup files.
-~$
-\.old$
-\.bak$
-\#$
-^\.#
-\.rej$
-\.orig$
-
-# Avoid Devel::Cover generated files
-^cover_db
-
-# kwalitee.t junk
-^Debian_CPANTS\.txt
-
-# Avoid tarballs
-\.(?:tar|tgz|tar\.gz)$
-
-^MooseX-Singleton-
-
-# No need to ship this
-\.shipit
