@@ -1,55 +1,29 @@
 name    = MooseX-Singleton
-author  = Shawn M Moore <sartak@gmail.com>
+author  = Shawn M Moore <code@sartak.org>
 license = Perl_5
 copyright_holder = Shawn M Moore
+copyright_year = 2007
 
-version = 0.29
+[@Author::ETHER]
+:version = 0.097
+Authority.authority = cpan:SARTAK
+Test::MinimumVersion.max_target_perl = 5.008003
+Test::ReportPrereqs.include = Dist::CheckConflicts
+-remove = Test::CleanNamespaces ; TODO
+-remove = Test::PodSpelling     ; TODO
+-remove = PodCoverageTests      ; TODO
 
-[GatherDir]
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[MetaJSON]
-[License]
-[Readme]
-[ExtraTests]
-[ExecDir]
-[ShareDir]
+[MetaResources]
+x_IRC = irc://irc.perl.org/#moose
+x_MailingList = http://lists.perl.org/list/moose.html
 
-[MakeMaker]
-[Manifest]
+[Prereqs::Soften]
+:version = 0.006000
+copy_to = develop.requires
+to_relationship = none
+module = MooseX::StrictConstructor
 
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
-
-[NextRelease]
-format = %v %{yyyy-MM-dd}d
-
-[PkgVersion]
-
-[Authority]
-authority = cpan:SARTAK
-
-[SurgicalPodWeaver]
-
-[PodSyntaxTests]
-[EOLTests]
-[NoTabsTests]
-
-[Prereqs / BuildRequires]
-ExtUtils::MakeMaker = 6.42
-Test::Fatal = 0
-Test::More = 0.88
-Test::Requires = 0
-
-[Prereqs]
-Moose = 1.10
-Scalar::Util = 0
-
-[Git::Check]
-allow_dirty =
-
-[Git::Tag]
-tag_format = %v
-tag_message =
+[Test::CheckBreaks]
+:version = 0.017
+conflicts_module = Moose::Conflicts
+conflicts_module = Module::Runtime::Conflicts
