@@ -6,6 +6,7 @@ use MooseX::Singleton::Role::Object;
 use MooseX::Singleton::Role::Meta::Class;
 use MooseX::Singleton::Role::Meta::Instance;
 
+our $VERSION = '0.30';
 
 Moose::Exporter->setup_import_methods( also => 'Moose' );
 
@@ -101,14 +102,9 @@ This method currently works like a hybrid of C<initialize> and
 C<instance>. However, calling C<new> directly will probably be deprecated in a
 future release. Instead, call C<initialize> or C<instance> as appropriate.
 
-=head1 BUGS
-
-Please report any bugs or feature requests to
-C<bug-moosex-singleton@rt.cpan.org>, or through the web interface at
-L<http://rt.cpan.org>. We will be notified, and then you'll automatically be
-notified of progress on your bug as we make changes.
-
 =head1 SOME CODE STOLEN FROM
+
+=for stopwords Anders
 
 Anders Nor Berle E<lt>debolaz@gmail.comE<gt>
 
